[package]
name = "braintree"
version = "0.0.5"
authors = ["Damien Radtke <damienradtke@gmail.com>"]
description = "An unofficial Braintree client for Rust."
repository = "https://github.com/dradtke/braintree-rs"
keywords = ["braintree", "payments"]
license = "MIT"

[dependencies]
RustyXML = "0.1.1"
hyper = "0.10.10"
hyper-native-tls = "0.2.2"
libflate = "0.1.5"
elementtree = "0.4"
